--- a/blogstyle.css
+++ b/blogstyle.css
@@ -18,26 +18,85 @@ body {
 }
 
 nav {
-    background-color: #ddd;
-    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 16px;
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
 }
+
 
 nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+
+nav ul li a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+main {
+    padding: 20px;
+    text-align: center;
+}
+
+article {
+    background-color: white;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    text-align: justify;
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: #333;
+}
+
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a.link-topic {
+    margin: 20px;
     text-decoration: none;
     color: #333;
 }
 
-main {
-    padding: 20px;
-}
-
-p {
-    font-family: Verdana, Tahoma, sans-serif ;
-    margin-bottom: 16px;
-    text-align: justify;
-}
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #555;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+  }
+  
+  #myBtn:hover {
+    background-color: #444;
+  }
