--- a/contactstyle.css
+++ b/contactstyle.css
@@ -17,27 +17,41 @@ body {
     color: #333;
 }
 
-nav {
-    background-color: #ddd;
-    padding: 10px;
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
-
-nav ul li {
-    display: inline;
-    margin-right: 16px;
+nav ul {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
 }
 
 nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    color: #333;
+}
+nav ul li a:hover {
+    background-color: #ddd;
+    color: black;
 }
 
 main {
     padding: 20px;
 }
 
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
 p {
-    font-family: Verdana, Tahoma, sans-serif ;
-    margin-bottom: 16px;
-    text-align: justify;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
