--- a/style.css
+++ b/style.css
@@ -18,18 +18,35 @@ body {
 }
 
 nav {
-    background-color: #ddd;
-    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 16px;
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
 }
 
 nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    color: #333;
+    transition: background-color 0.3s;
+}
+
+nav ul li a:hover {
+    background-color: #ddd;
+    color: black;
 }
 
 main {
